@@ -5,5 +5,6 @@ AUX nss-m4.patch 1446 RMD160 81f18f2170f590e46b6824347edfae623677e0bb SHA1 00c6a
 DIST mozldap-6.0.6.tar.gz 708821 RMD160 d932813f0b6f5808c8f0b255718a413d6a6e6ba5 SHA1 db7b8d845f8917638512ae92381675fe76432eff SHA256 3a7b94c6698e2acb91a577decee5eb6103f183d6b9833abb169124818ba80d06
 EBUILD mozldap-6.0.6-r1.ebuild 3807 RMD160 e37c86945866945bb1fadc1e803e46d1bcfa6782 SHA1 355e87c14a41a6e8467010d94d585ece44349c76 SHA256 46168b06b51ed882f0d53109ce409ee8d463904d760fa330598d3a7554884872
 EBUILD mozldap-6.0.6.ebuild 3387 RMD160 172771c78955218356710791e60b580637f75bef SHA1 a65a99dc35987acb97902657a472ba60256285ed SHA256 106ac02c50ff8813d8a9fba4d1086c30a052acc5738a78013196e92b8299e6fe
-MISC ChangeLog 966 RMD160 feadb47b926abb6cca010f2d9959e3eecd01b200 SHA1 996d978d46aa6a4f9464fbd3bac0f871fa1d366f SHA256 1e4c56283598f292fbe2d87964990951c247f73996a7079e17725839f695efcf
+EBUILD mozldap-9999.ebuild 3594 RMD160 34ae4df08d24fb48dc53946aaa47f59421fbbb5c SHA1 5838c31e5b820177d4ac655a836ba202b32be369 SHA256 8258105e44bbf8f73e1b97874e9bef0e9c82175555f451ecee4c8a8a4c5f73fe
+MISC ChangeLog 1095 RMD160 d076a34bc76b2146ef3c20c150307d18bb136bab SHA1 4776acdab88cb25c380186c7e64ab0660f37723c SHA256 82411e738d621e9464dbe1b8872bc97e11ed7c78e027e069efc12b542eef5b92
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
