@@ -1,0 +1,120 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="2"
+
+WANT_AUTOCONF="2.1"
+
+inherit eutils multilib versionator cvs
+
+DESCRIPTION="Mozilla LDAP C SDK"
+HOMEPAGE="http://wiki.mozilla.org/LDAP_C_SDK"
+SRC_URI=""
+
+ECVS_MODULE="mozilla/directory/c-sdk"
+ECVS_SERVER="cvs-mirror.mozilla.org:/cvsroot"
+
+LICENSE="MPL-1.1 GPL-2 LGPL-2.1"
+SLOT="0"
+KEYWORDS=""
+IUSE="ipv6 debug +sasl +threads"
+
+DEPEND="=dev-libs/nss-9999
+	=dev-libs/nspr-9999
+	=dev-libs/svrcore-9999
+	sasl? ( dev-libs/cyrus-sasl )
+	dev-util/pkgconfig"
+
+RDEPEND="=dev-libs/nss-9999
+		=dev-libs/nspr-9999
+		sasl? ( dev-libs/cyrus-sasl )"
+
+S="${WORKDIR}"/mozilla/directory/c-sdk
+
+src_configure() {
+
+	local myconf=""
+
+	myconf="${myconf} --libdir=/usr/$(get_libdir)/mozldap"
+
+	econf $(use_enable debug) \
+		$(use_enable ipv6) \
+		$(use_enable amd64 64bit) \
+		$(use_with sasl) \
+		$(use_with threads pthreads) \
+		$(use_with threads user-pthreads) \
+		--with-svrcore-inc=/usr/include/svrcore \
+		--with-svrcore-lib=/usr/$(get_libdir)/svrcore \
+		--enable-clu \
+		--enable-optimize="${CFLAGS}" \
+		${myconf} || die "econf failed"
+}
+
+src_install () {
+
+	# Their build system is royally fucked, as usual
+	cd "${S}"
+	sed -e "s,%libdir%,\$\{exec_prefix\}/$(get_libdir)/${PN},g" \
+	    -e "s,%prefix%,/usr,g" \
+	    -e "s,%major%,$(get_major_version ${PV}),g" \
+	    -e "s,%minor%,$(get_version_component_range 2 ${PV}),g" \
+	    -e "s,%submin%,$(get_version_component_range 3 ${PV}),g" \
+	    -e "s,%libsuffix%,$(get_major_version ${PV})$(get_version_component_range 2 ${PV}),g" \
+	    -e "s,%bindir%,\$\{exec_prefix\}/$(get_libdir)/${PN},g" \
+	    -e "s,%exec_prefix%,\$\{prefix\},g" \
+	    -e "s,%includedir%,\$\{exec_prefix\}/include/${PN},g" \
+	    -e "s,%NSPR_VERSION%,$(pkg-config --modversion nspr),g" \
+	    -e "s,%NSS_VERSION%,$(pkg-config --modversion nss),g" \
+	    -e "s,%SVRCORE_VERSION%,$(pkg-config --modversion svrcore),g" \
+	    -e "s,%MOZLDAP_VERSION%,${PV},g" \
+	   "${S}"/"${PN}".pc.in > "${S}"/"${PN}".pc || die "sed in install failed"
+
+	emake  install || die "make failed"
+	local MY_S="${WORKDIR}"/mozilla/dist/
+
+	rm -rf "${MY_S}/bin/"lib*.so
+	rm -rf "${MY_S}/public/ldap-private"
+
+	exeinto /usr/$(get_libdir)/mozldap
+	doexe "${MY_S}"/lib/*so*
+	doexe "${MY_S}"/lib/*.a
+	doexe "${MY_S}"/bin/*
+
+	#create compatibility PATH link
+
+	 for i in ldapcmp ldapcompare ldapdelete ldapmodify \
+		 	ldappasswd ldapsearch;do
+	 	dosym /usr/$(get_libdir)/mozldap/$i /usr/bin/moz"${i}" || die
+	 # compat for 389-project
+	done
+
+	# move the headers around
+	insinto /usr/include/mozldap
+	doins "${MY_S}/public/ldap/"*.h
+
+	# add sample config
+	insinto /usr/share/mozldap
+	doins "${MY_S}"/etc/*.conf
+
+	#and while at it move them to files with versions-ending
+	#and link them back :)
+	cd "${D}"/usr/$(get_libdir)/mozldap
+
+	#create compatibility Link
+	ln -sf libldap$(get_major_version ${PV})$(get_version_component_range 2 ${PV}).so liblber$(get_major_version ${PV})$(get_version_component_range 2 ${PV}).so
+	#so lets move
+	for file in *.so; do
+		mv ${file} ${file}.$(get_major_version ${PV}).$(get_version_component_range 2 ${PV})
+		ln -s ${file}.$(get_major_version ${PV}).$(get_version_component_range 2 ${PV}) ${file}
+		ln -s ${file}.$(get_major_version ${PV}).$(get_version_component_range 2 ${PV}) ${file}.$(get_major_version ${PV})
+	done
+
+	# cope with libraries being in /usr/lib/mozldap
+	dodir /etc/env.d
+	echo "LDPATH=/usr/$(get_libdir)/mozldap" > "${D}"/etc/env.d/08mozldap
+
+	# create pkg-config file
+	insinto /usr/$(get_libdir)/pkgconfig/
+	doins "${S}"/mozldap.pc
+}
