@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +mozldap-9999.ebuild:
+  add live 9999 version
+
+*mozldap-9999 (31 Okt 2009)
+
   26 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   mozldap-6.0.6-r1.ebuild:
   add compat symliks
